# QuizGate-server-rust

./: .gitignore  0.json  Cargo.toml  LICENSE  README.md  config.toml  demo.json  queue.json
examples/: client.rs
papers/: 0.json  114514.json
resources/css/: exam.css  login.css  register.css  upload.css
resources/templates/: exam.html
src/: database.rs  email_server.rs  error.rs  exam_webserver.rs  main.rs  main_old.1  message_queue.rs  message_queue.rs.1  sql_server.rs  utils.rs  ws_handler.rs  ws_server.rs
src/service/: mod.rs  pages.rs  quiz.rs  register.rs  resources.rs  test.rs  upload.rs
src/struct/: awl_type.rs  mod.rs  submit.rs
src/structs/: awl_type.rs  client.rs  mod.rs  request.rs  respond.rs  submit.rs
templates/: exam.html  register.html  upload.html
tests/: 0.json  114514.json
