[package]
name = "autowhitelist-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
warp = "0.3"
futures = "0.3.30"
tungstenite = "0.21.0"
http = "1.1.0"
url = "2.5.0"

[[example]]
name = "client"
path = "examples/client.rs"